En esta versión se definio cuestiones de colores hover del navbar, y se trabajo en el diseño responsivo para tablets

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       <h3 class="titulo-card">Escuelita de futbol infantil</h3>
     </div>
       <div class="content-text">
-        <p>Los jóvenes son el futuro y la prioridad para cualquier asociación que quiera que su comunidad siga creciendo con el tiempo, por esta razón capacitamos a 
+        <p>Los jóvenes son el futuro y la prioridad para cualquier asociación que quiera que su comunidad siga creciendo con el tiempo.Por esta razón capacitamos a 
           niños y niñas a disfrutar de este hermoso deporte que es el futbol.</p>
         <a class="btn btn-outline-primary" href="activity/futbol-infantil.html">Ver mas</a>
       </div></div>
