--- a/activity/celebraciones.html
+++ b/activity/celebraciones.html
@@ -29,16 +29,16 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
           <ul class="navbar-nav text-center">
             <li class="nav-item">
-              <a class="nav-link" href="#">Inicio</a>
+              <a class="nav-link" href="../index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Sobre Nosotros</a>
+              <a class="nav-link" href="../#titular-presentacion">Sobre Nosotros</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Actividades</a>
+              <a class="nav-link" href="../#sobre-nosotros">Actividades</a>
             </li>   
             <li class="nav-item">
-                <a class="nav-link" href="#">Contacto</a>
+                <a class="nav-link" href="../#contacto">Contacto</a>
               </li>   
           </ul>
         </div>  
@@ -111,10 +111,10 @@
         <div class="container">
           <img src="/img/logo1.jpg" class="logo-brand" alt="">
           <ul class="list-inline">
-            <li class="list-inline-item"><a href="#">Inicio</a></li>
-            <li class="list-inline-item"><a href="#">Sobre Nosotros</a></li>
-            <li class="list-inline-item"><a href="#">Actividades</a></li>
-            <li class="list-inline-item"><a href="#">Contacto</a></li>
+            <li class="list-inline-item"><a href="../index.html">Inicio</a></li>
+            <li class="list-inline-item"><a href="../#titular-presentacion">Sobre Nosotros</a></li>
+            <li class="list-inline-item"><a href="../#sobre-nosotros">Actividades</a></li>
+            <li class="list-inline-item"><a href="../#contacto">Contacto</a></li>
           </ul>
           <ul class="list-inline">
             <li><a href="#"><i class="fab fa-facebook"></i></a></li>
