En esta ultima version , se modifico el responsive de dispositivos de 320/360. y se modificaron fotos de carruseles

--- a/activity/campeonatos.html
+++ b/activity/campeonatos.html
@@ -46,7 +46,7 @@
 
       <header class="main-activity">
           <div class="content-main">
-            <h2 class="titular-actividades"><ion-icon name="football-outline"></ion-icon> Campeonato masculino, veteranos y femenino <ion-icon name="football-outline"></ion-icon></h2>
+            <h2 class="titular-actividades">Campeonato masculino, veteranos y femenino <img src="/img/icon3.jpg.png" alt=""></h2>
           </div>
       </header>
 
@@ -79,19 +79,19 @@
             <!-- The slideshow -->
             <div class="carousel-inner carousel-activity">
               <div class="carousel-item active">
-                <img src="../activity/image-actividades/futbol16.jpg" alt="Los Angeles">
+                <img src="../activity/image-actividades/futbol16.jpg" alt="futbol-jujeño">
               </div>
               <div class="carousel-item">
-                <img src="../activity/image-actividades/futbol10.png" alt="Chicago">
+                <img src="../activity/image-actividades/futbol10.png" alt="ligajujeñaenBsAs">
               </div>
               <div class="carousel-item">
-                <img src="../activity/image-actividades/futbol4.png" alt="New York">
+                <img src="../activity/image-actividades/futbol4.png" alt="Jujuy-Buenos Aires-futbol">
               </div>
               <div class="carousel-item">
-                <img src="../activity/image-actividades/futbol6.png" alt="New York">
+                <img src="../activity/image-actividades/futbol6.png" alt="futbol-femenino-jujuy">
               </div>
               <div class="carousel-item">
-                <img src="../activity/image-actividades/futbol5.png" alt="New York">
+                <img src="../activity/image-actividades/futbol5.png" alt="escuelita-infantil-futbol">
               </div>
             </div>
             
@@ -117,7 +117,7 @@
             <li class="list-inline-item"><a href="../#contacto">Contacto</a></li>
           </ul>
           <ul class="list-inline">
-            <li><a href="https://m.facebook.com/profile.php?id=100057829022477&refsrc=http%3A%2F%2Fwww.google.com%2F&_rdr"><i class="fab fa-facebook"></i></a></li>
+            <li><a href="https://www.facebook.com/profile.php?id=100057829022477"><i class="fab fa-facebook"></i></a></li>
             <small><i class="far fa-copyright"></i>2021, Asociación civil deportiva y recreativa comunidades de la Puna jujeña en Buenos Aires</small>
           </ul>
         </div>
