--- a/activity/futbol-infantil.html
+++ b/activity/futbol-infantil.html
@@ -23,7 +23,7 @@
 <body>
     <nav class="navbar navbar-expand-md navbar-dark sticky-top">
         <a class="navbar-brand" href="#"> <img src="../img/logo1.jpg" alt="logo"></a>
-        <button class="navbar-toggler text-success" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-controls="collapsibleNavbar">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-controls="collapsibleNavbar">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
@@ -46,13 +46,13 @@
 
       <header class="main-activity">
           <div class="content-main">
-            <h2 class="titular-actividades"><ion-icon name="football-outline"></ion-icon>Escuelita infantil de futbol amateur<ion-icon name="football-outline"></ion-icon></h2>
+            <h2 class="titular-actividades">Escuelita infantil de futbol <img src="/img/icon4.jpg.png" alt=""></h2>
           </div>
       </header>
 
       <section class="container-slide">
           <div class="main-details">
-              <h3>Futbol infanto-juvenil</h3>
+              <h3>Futbol infanto juvenil</h3>
               <p>Como Asociación brindamos no solamente espacios de recreacción deportiva para las personas juveniles y adultas,
                 sino que a su vez trabajamos constantemente en la integración de los mas chicos.Frente a la gran cantidad de ninos y niñas  que concurren al predio,
                 fuimos de a poco incluyendo espacios de interacción y actividades deportivas para satifacer las necesidades de los mismos.
@@ -81,13 +81,13 @@
                 <img src="../activity/image-actividades/infantil/niño3.jpg" alt="futbol-infantil">
               </div>
               <div class="carousel-item">
-                <img src="../activity/image-actividades/infantil/niño5.png" alt="chicasyelfutbol">
+                <img src="../activity/image-actividades/infantil/niños23.jpg" alt="chicasyelfutbol">
               </div>
               <div class="carousel-item">
                 <img src="../activity/image-actividades/infantil/niño6.png" alt="elfutbolylosniños">
               </div>
               <div class="carousel-item">
-                <img src="../activity/image-actividades/infantil/niño7.jpg" alt="entrenamiento-infantil">
+                <img src="../activity/image-actividades/infantil/niños20.jpg" alt="entrenamiento-infantil">
               </div>
               <div class="carousel-item">
                 <img src="../activity/image-actividades/infantil/niño2.jpg" alt="recreaccion-juegos">
@@ -116,7 +116,7 @@
             <li class="list-inline-item"><a href="../#contacto">Contacto</a></li>
           </ul>
           <ul class="list-inline">
-            <li><a href="https://m.facebook.com/profile.php?id=100057829022477&refsrc=http%3A%2F%2Fwww.google.com%2F&_rdr"><i class="fab fa-facebook"></i></a></li>
+            <li><a href="https://www.facebook.com/profile.php?id=100057829022477"><i class="fab fa-facebook"></i></a></li>
             <small><i class="far fa-copyright"></i>2021, Asociación civil deportiva y recreativa comunidades de la Puna jujeña en Buenos Aires</small>
           </ul>
         </div>
