--- a/activity/celebraciones.html
+++ b/activity/celebraciones.html
@@ -46,7 +46,7 @@
 
       <header class="main-activity">
           <div class="content-main">
-            <h2 class="titular-actividades"><ion-icon name="football-outline"></ion-icon>Festivales<ion-icon name="football-outline"></ion-icon></h2>
+            <h2 class="titular-actividades">Festivales</h2>
           </div>
       </header>
 
@@ -117,7 +117,7 @@
             <li class="list-inline-item"><a href="../#contacto">Contacto</a></li>
           </ul>
           <ul class="list-inline">
-            <li><a href="https://m.facebook.com/profile.php?id=100057829022477&refsrc=http%3A%2F%2Fwww.google.com%2F&_rdr"><i class="fab fa-facebook"></i></a></li>
+            <li><a href="https://www.facebook.com/profile.php?id=100057829022477"><i class="fab fa-facebook"></i></a></li>
             <small><i class="far fa-copyright"></i>2021, Asociación civil deportiva y recreativa comunidades de la Puna jujeña en Buenos Aires</small>
           </ul>
         </div>
