--- a/index.html
+++ b/index.html
@@ -80,22 +80,22 @@
       <!-- The slideshow -->
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="img/diapositivas/diapositiva1.jpg.jpg" alt="">
+          <img src="img/diapositivas/diapositiva1.jpg.jpg" alt="Jujuy">
         </div>
         <div class="carousel-item">
-          <img src="img/diapositivas/diapositiva2.jpg.jpg" alt="">
+          <img src="img/diapositivas/diapositiva2.jpg.jpg" alt="futbol-jujeño">
         </div>
         <div class="carousel-item">
-          <img src="img/diapositivas/diapositiva3.jpg.jpg" alt="">
+          <img src="img/diapositivas/diapositiva3.jpg.jpg" alt="escuelita-de-futbol-jujuy">
         </div>
         <div class="carousel-item">
-          <img src="img/diapositivas/diapositiva4.jpg.jpg" alt="">
+          <img src="img/diapositivas/diapositiva4.jpg.jpg" alt="futbol-jujeño-en-bsas">
         </div>
         <div class="carousel-item">
-          <img src="img/diapositivas/diapositiva5.jpg.png" alt="">
+          <img src="img/diapositivas/diapositiva5.jpg.png" alt="futbol-femenino-jujeño">
         </div>
         <div class="carousel-item">
-          <img src="img/diapositivas/diapositiva6.jpg.png" alt="">
+          <img src="img/diapositivas/diapositiva6.jpg.png" alt="campeonatos-veteranos-ciudad-evita">
         </div>
       </div>
       
@@ -114,7 +114,7 @@
 <header class="container-titular">
     <div class="container text-center">
       <h2 class="titulado" id="sobre-nosotros">Actividades</h2>
-      <p>Desde nuestro lugar promovemos las actividades deportivas tanto para niños, jovenes y veteranos. Anualmente se realizan torneos de futbol masculino , femenino , como asi también para las personas adultas modalidad veteranos.
+      <p>Desde nuestro lugar promovemos las actividades deportivas tanto para niños, jovenes y veteranos.Anualmente se realizan torneos de futbol masculino , femenino , como asi también para las personas adultas modalidad veteranos.
         Nuestra asociación cuenta con alrededor de 1000 personas (socios y no socios) que ingresan a diario a hacer alguna actividad ,pasar el día y compartir un buen rato en familia.
       </p>
     </div>
@@ -123,7 +123,7 @@
     <section class="container-cards">
       <div class="cards">
         <div class="img-hero">
-          <img src="img/cards/card2.png" alt="">
+          <img src="img/cards/card2.png" alt="futbol-masculino-jujuy-en-bsas">
         </div>
         <div class="top-text">
         <h3 class="titulo-card">Futbol masculino</h3>
@@ -136,7 +136,7 @@
 
       <div class="cards"> 
         <div class="img-hero">
-        <img src="img/cards/card1.jpg" alt="">
+        <img src="img/cards/card1.jpg" alt="futbol-femenino-jujeño-en-bsas">
       </div>
       <div class="top-text">
       <h3 class="titulo-card">Futbol femenino</h3>
@@ -149,7 +149,7 @@
 
       <div class="cards">
       <div class="img-hero">
-        <img src="img/cards/card4.jpg" alt="">
+        <img src="img/cards/card4.jpg" alt="futbol-infantil-ciudad-evita">
       </div>
       <div class="top-text">
       <h3 class="titulo-card">Escuelita de futbol infantil</h3>
@@ -158,10 +158,12 @@
         <p>Los jóvenes son el futuro y la prioridad para cualquier asociación que quiera que su comunidad siga creciendo con el tiempo.Por esta razón capacitamos a 
           niños y niñas a disfrutar de este hermoso deporte que es el futbol.</p>
         <a class="btn btn-outline-primary" href="activity/futbol-infantil.html">Ver mas</a>
-      </div></div>
+      </div>
+    </div>
+
       <div class="cards">
         <div class="img-hero">
-          <img src="img/cards/card3.jpg" alt="">
+          <img src="img/cards/card3.jpg" alt="festivales-jujeños-en-bsas">
       </div>
       <div class="top-text">
       <h3 class="titulo-card">Festivales</h3>
@@ -179,7 +181,8 @@
       <header class="container-titular contenedor-contacto">
         <div class="container text-center">
           <h2 class="titulado" id="contacto">Contacto</h2>
-          <p>Redes sociales: <strong>@AsociaciondeportivadelaPunaJujeñaenBsAs.</strong></p>
+          <p>Redes sociales:
+            @Asociacion deportiva de la Puna Jujeña en BsAs.</p>
           <p>Dirección: El hornero / El curro, ruta 21, La Matanza, Buenos Aires.</p>
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1639.842581829697!2d-58.534549741933354!3d-34.713120090294005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccf464d5e028b%3A0x53e6ce57d328236b!2sEl%20Curro%2025%2C%20Cdad.%20Evita%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1596029532795!5m2!1ses!2sar" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
           
@@ -198,7 +201,7 @@
             <li class="list-inline-item"><a href="#contacto">Contacto</a></li>
           </ul>
           <ul class="list-inline">
-            <li><a href="https://m.facebook.com/profile.php?id=100057829022477&refsrc=http%3A%2F%2Fwww.google.com%2F&_rdr"><i class="fab fa-facebook"></i></a></li>
+            <li><a href="https://www.facebook.com/profile.php?id=100057829022477"><i class="fab fa-facebook"></i></a></li>
             <small><i class="far fa-copyright"></i>2021, Asociación civil deportiva y recreativa comunidades de la Puna jujeña en Buenos Aires</small>
           </ul>
         </div>
